k8s/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8002
      targetPort: http
    - name: grpc
      port: 50051
      targetPort: grpc
